# proxygen-api-specification

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml  proxygen-credentials-template-api-standard.yaml  proxygen-credentials-template-api.yaml  proxygen-settings-for-api  proxygen-settings-for-api-standard.yaml  proxygen-settings.yaml
.github/workflows/: pr-lint.yaml  publish-uat.yml  publish.yml  release.yml
specification/: digital-staff-passport-api-standard.yaml  digital-staff-passport-api.yaml  proxygen.yaml
specification/components/examples/: AddEmployeeRecordRequest.json  AddEmployeeRecordRequestClinicalTest.json  AddEmployeeRecordRequestCoreSkillsTraining.json  AddEmployeeRecordRequestDBS.json  AddEmployeeRecordRequestDBSCheckOutcome.json  AddEmployeeRecordRequestDBSCheckSupportingInformation.json  AddEmployeeRecordRequestImmunisation.json  AddEmployeeRecordRequestProfessionalRegistration.json  AddEmployeeRecordRequestRightToWork.json  AddEmployeeRecordRequestTest.json  AddEmployeeRecordResponseDBS.json  AddEmployeeRecordResponseDBSCheckOutcome.json  AddEmployeeRecordResponseDBSCheckSupportingInformation.json  AddEmployeeRecordResponseExposureProneProcedureTests.json  AddEmployeeRecordResponseObservation.json  AddEmployeeRecordResponseProfessionalRegistration.json  AddEmployeeRecordResponseRightToWork.json  AddEmployeeRecordResponseVaccination.json  ErrorResponse.json  GetEmployeePersonalDetailsHappyPathResponse.json  GetEmployeePersonalDetailsResponseSuccess.json  GetEmployeeRecordsErrorResponse.json  (+12 more)
(+5 files in other folders)
