[tool.poetry]
name = "proxygen-api-specification"
version = "0.1.0"
description = "Proxygen API Specification"
authors = ["Alex Hawdon <alex.hawdon1@nhs.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
openapi-spec-validator = "^0.5.7"
proxygen-cli = "^2.0.13"
gitpython = "^3.1.31"
semver = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
