[tool.poetry]
name = "digital-staff-passport"
version = "0.1.0"
description = "Digital staff passport API specification"
authors = ["Tony Heap <tony.heap1@nhs.net>"]
license = "MIT"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
gitpython = "^3.1.31"
semver = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
